removed technical debts from files io/file/impoter/importService.java and io/file/importer/importViewModel.java
Removed some of the technical debts from the files io/file/impoter/importService.java and io/file/importer/importViewModel.java

o/file/impoter/importService.java
Fixed:
1. Remove this useless assignment to local variable "recordingDistanceInterval".
2. Remove this unused "recordingDistanceInterval" local variable.

io/file/importer/importViewModel.java
Fixed:
1. Replace this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'